[gd_scene load_steps=4 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Gauges/Gauge.tscn" type="PackedScene" id=2]

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 449, 263 )
theme = SubResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="GridContainer" parent="."]
anchor_right = 0.5
margin_left = 40.0
margin_top = 24.0
margin_right = -3.0
margin_bottom = 104.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 582, 49 )
text = "Costumer"

[node name="LineEdit3" type="LineEdit" parent="VBoxContainer"]
margin_left = 66.0
margin_right = 317.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 507, 54 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 15.0
margin_top = 25.0
margin_right = 78.0
margin_bottom = 46.0
theme = SubResource( 4 )
disabled = true
text = "Refresh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
visible = false
margin_left = 258.0
margin_top = 125.0
margin_right = 342.0
margin_bottom = 171.0
rect_pivot_offset = Vector2( 154, 11 )
theme = SubResource( 4 )
text = "DEBUG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_left = 31.0
margin_top = 186.0
margin_right = 362.0
margin_bottom = 332.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProvisionRequest" type="HTTPRequest" parent="."]

[node name="ProfileRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LoginRequest" type="HTTPRequest" parent="."]

[node name="CustomerRequest" type="HTTPRequest" parent="."]

[node name="TelemetryRequest" type="HTTPRequest" parent="."]

[node name="AttributesRequest" type="HTTPRequest" parent="."]

[node name="Loading" type="Label" parent="."]
margin_left = 279.0
margin_top = 129.0
margin_right = 450.0
margin_bottom = 161.0
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[node name="ProgressBar" type="ProgressBar" parent="Timer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 147.0
margin_top = 29.0
margin_right = 212.0
margin_bottom = 47.0
max_value = 15.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Timer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 74.0
margin_top = 18.0
margin_right = 150.0
margin_bottom = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeanGauge" parent="." instance=ExtResource( 2 )]
margin_left = 29.0
margin_top = 352.0
margin_right = -115.0
margin_bottom = 585.0
rect_pivot_offset = Vector2( 211, 138 )
value = 0.0
max_value = 100.0
unit = "[Â°C]"
variable_name = "Temperatura"

[node name="MeanGauge2" parent="." instance=ExtResource( 2 )]
margin_left = 250.0
margin_top = 352.0
margin_right = 106.0
margin_bottom = 585.0
rect_pivot_offset = Vector2( 211, 138 )
value = 0.0
max_value = 50.0
unit = "[V]"
variable_name = "Voltaje"

[node name="MeanGauge3" parent="." instance=ExtResource( 2 )]
margin_left = 471.0
margin_top = 352.0
margin_right = 327.0
margin_bottom = 585.0
rect_pivot_offset = Vector2( 211, 138 )
value = 0.0
max_value = 1000.0
unit = "[Lux]"
variable_name = "Luz (IN)"

[node name="MeanGauge4" parent="." instance=ExtResource( 2 )]
margin_left = 29.0
margin_top = 590.0
margin_right = -115.0
margin_bottom = 823.0
rect_pivot_offset = Vector2( 211, 138 )
value = 0.0
max_value = 100.0
unit = "[%]"
variable_name = "Humedad"

[node name="MeanGauge5" parent="." instance=ExtResource( 2 )]
margin_left = 250.0
margin_top = 590.0
margin_right = 106.0
margin_bottom = 823.0
rect_pivot_offset = Vector2( 211, 138 )
value = 0.0
max_value = 8.0
unit = "[A]"
variable_name = "Corriente"

[node name="MeanGauge6" parent="." instance=ExtResource( 2 )]
margin_left = 471.0
margin_top = 590.0
margin_right = 327.0
margin_bottom = 823.0
rect_pivot_offset = Vector2( 211, 138 )
value = 0.0
max_value = 1000.0
unit = "[Lux]"
variable_name = "Luz (OUT)"

[node name="Back" type="Button" parent="."]
margin_left = 628.0
margin_top = 14.0
margin_right = 712.0
margin_bottom = 60.0
theme = SubResource( 4 )
text = "Atras"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
anchor_left = -0.00833333
anchor_top = -0.0585938
anchor_right = -0.00833333
anchor_bottom = -0.0585938
margin_left = 49.0
margin_top = 153.0
margin_right = 160.0
margin_bottom = 173.0
text = "Iniciar"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="request_completed" from="ProvisionRequest" to="." method="_on_ProvisionRequest_request_completed"]
[connection signal="request_completed" from="ProfileRequest" to="." method="_on_ProfileRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="LoginRequest" to="." method="_on_LoginRequest_request_completed"]
[connection signal="request_completed" from="CustomerRequest" to="." method="_on_CustomRequest_request_completed"]
[connection signal="request_completed" from="TelemetryRequest" to="." method="_on_TelemetryRequest_request_completed"]
[connection signal="request_completed" from="AttributesRequest" to="." method="_on_AttributesRequest_request_completed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Timer/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
